--- a/demo.html
+++ b/demo.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>台中科大</title>
+    <title>Document</title>
 </head>
 <body>
-    許文娟
-    3411207006
-    <br>
-    <a href="demo.html">練習元件</a>
+    練習元件
 </body>
 </html>
