--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
     <hr>
     <h2>超連結</h2>
     <a href="https://www.google.com.tw/?hl=zh_TW">goole</a>
-    <a href="https://www.nutc.edu.tw/target="target="_blank">國立台中科技大學(另開視窗)</a>
+    <a href="https://www.nutc.edu.tw/"target="_blank">國立台中科技大學</a>
     <br><br><br><br><br>
     <a href="#up">移到最上面</a>
 </body>
