--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="demo.html">練習元件</a>
     <br>
     <a href="css.html">css選擇器</a>
+    <br>
+    <a href="background.html">css背景</a>
 </body>
 </html>
